    flags from Harald Barth rather than relying on the defaults.  This
    doesn't help with general bos create; long term, the defaults need to
    be fixed.  (Closes: #364100)
  * Add a note in README.servers about fileserver tuning options.
  * Update debconf templates to follow the best practice recommendations
    from the Developer's Reference.
  * Update standards version to 3.7.2 (no changes required).

 -- Russ Allbery <rra@debian.org>  Wed,  7 Jun 2006 12:06:14 -0700

openafs (1.4.1-2) unstable; urgency=low

  * Exit successfully in the openafs-client init script if no module is
    installed, since otherwise openafs-client will fail to install until
    one builds a module.  This restores previous accidental behavior due
    to a bug in debhelper.  (Closes: #362695)
  * libopenafs-dev must conflict with liblwp-dev since they both provide
    liblwp.a.  Thanks, Justin Pryzby.  (Closes: #362842)
  * openafs-client recommends lsof, since the init script uses it for
    cleaner shutdown.

 -- Russ Allbery <rra@debian.org>  Sat, 15 Apr 2006 15:47:04 -0700

openafs (1.4.1-1) unstable; urgency=low

  * New upstream release.
    - Supports Linux 2.6.16.  (Closes: #358203)
    - Suspend should work with newer kernels.  (Closes: #341588)
    - Safer cache size calculation.  (Closes: #360176)
    - Upstream now includes man pages, so remove our backport.
  * Subsume openafs-krb5 into this source package.
    - Acknowledge NMU.  (Closes: #304933)
    - Update to the OpenAFS aklog and asetkey.  (Closes: #196094)
    - Backport asetkey from upstream CVS.
    - Include ka-forwarder from the old migration toolkit.
    - Add man pages for asetkey and ka-forwarder.
  * Subsume openafs-doc into this source package.
  * Since 2.6 is the supported kernel for etch, build the userspace with
    a sysname of *_linux26 where supported.  This only affects the sys
    command.  (Using livesys instead is better.)  (Closes: #358118)