@@ -101,10 +101,7 @@ build: configure-stamp build-stamp
 build-stamp:
 	dh_testdir
 	mkdir -p $(CURDIR)/debian/tmp
-	cd doc/man-pages/pod8 && pod2man -c 'AFS Command Reference' \
-	    -r 'OpenAFS' -s 8 asetkey.pod > ../man8/asetkey.8
-	cd doc/man-pages/pod8 && pod2man -c 'AFS Command Reference' \
-	    -r 'OpenAFS' -s 8 ka-forwarder.pod > ../man8/ka-forwarder.8
+	cd doc/man-pages && perl generate-man
 	$(MAKE) install_nolibafs DESTDIR=$(CURDIR)/debian/tmp
 	chmod +x debian/afs-rootvol debian/afs-newcell
 	touch build-stamp
