@@ -10,9 +10,11 @@ openafs (1.4.1-3) unstable; urgency=low
   * Add a note in README.servers about fileserver tuning options.
   * Update debconf templates to follow the best practice recommendations
     from the Developer's Reference.
+  * Regenerate the man pages on build since the pre-generated ones were
+    done with a very old version of pod2man.
   * Update standards version to 3.7.2 (no changes required).
 
- -- Russ Allbery <rra@debian.org>  Wed,  7 Jun 2006 12:06:14 -0700
+ -- Russ Allbery <rra@debian.org>  Wed,  7 Jun 2006 12:52:06 -0700
 
 openafs (1.4.1-2) unstable; urgency=low
 
